# laai-server

./: .gitignore  example.env  main.py  requirements.txt  requirenments.txt
configs/: mongo_config.py
controllers/: conversation_controller.py  health_controller.py  user_controller.py
dal/: __init__.py  conversation_dal.py  health_dal.py  mongodb_dal.py  user_dal.py
server/: .gitignore  Dockerfile  LICENSE  pyproject.toml  requirements.txt
server/configs/: config.py  mongo_config.py
server/controllers/: cached_augmented_generation_controller.py  conversation_controller.py  socratic_tutor_controller.py  user_controller.py
server/core/prompt/: followup_prompt.py  system_instruction.py  tutor_guidance_generator.py  tutor_question_generator.py
server/core/services/: followup_question.py
server/schemas/: socratic_tutor_schemas.py
server/schemas/models/: conversation.py  document.py  model_registry.py  user.py
server/services/: conversation_service.py  document_service.py  gemini_service.py  user_service.py
server/src/: config.py  main.py  requirements.txt
server/src/agent/: service.py
server/src/agent/Socratic/: agent.py  prompt.py
server/src/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
server/src/chat/: routes.py  schemas.py  service.py
server/src/db/: redis.py
server/src/utils/: celery_tasks.py  errors.py  mail.py  middleware.py
server/temp_db/: conversation_db_v3.json
server/utils/: pdf_utils.py
services/: conversation_service.py  health_service.py  user_service.py
temp_db/: conversation_db_v3.json
(+11 files in other folders)
