[project]
name = "laai-server"
version = "0.1.0"
description = "educational ai"
authors = [
    {name = "tharoosha",email = "tharooshavihidun@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioredis (==2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
